# riscv-sim

./: CMakeLists.txt  Makefile  README.md
src/: cpu.cpp  cpu.hpp  main.cpp  memory.cpp  memory.hpp
tests/: gen_test.py
tests/ejemplos_informe/: gen_examples.py
